# alpaca-excerpt-bot

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  README.md  justfile  main.py  pyproject.toml  requirements.txt
scripts/: deploy.sh
